# protextinator

./: .gitignore  Cargo.toml  README.md
examples/: text.rs
src/: action.rs  buffer_cache.rs  buffer_utils.rs  byte_cursor.rs  ctx.rs  font_family_query.rs  id.rs  lib.rs  math.rs  state.rs  style.rs  text.rs  text_manager.rs  text_params.rs  utils.rs
src/tests/: apply_action.rs  byte_offset.rs  caret_positioning.rs  copy_selected_text.rs  mod.rs  resolved_font_family.rs  serialization.rs  text_state.rs
