[package]
name = "protextinator"
version = "0.2.0"
edition = "2021"
description = "Text management, made simple"
keywords = ["text", "rendering", "gui", "graphics", "image"]
categories = ["text-processing", "text-editors"]
authors = ["Anton Suprunchuk <anton.suprunchuk@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/antouhou/protextinator"
documentation = "https://docs.rs/protextinator/"
readme = "README.md"

[features]
default = []
serialization = ["dep:serde"]

[dependencies]
cosmic-text = "0.14"
ahash = "0.8.12"
smol_str = "0.3"
serde = { version = "1.0.219", features = ["derive"], optional = true }

[dev-dependencies]
grafo = "0.7"
winit = "0.30"
futures = "0.3"
env_logger = "0.11"
serde_json = "1.0"
